--- a/src/pages/tarefas/tarefas.module.css
+++ b/src/pages/tarefas/tarefas.module.css
@@ -1,3 +1,7 @@
+*{
+  background-color: brown;
+}
+
 .tarefasEdit{
     color: black;
     display: flex;
@@ -9,18 +13,27 @@
 }
 
 .caixaComScroll{
+      background-color: white;
       width: 40rem;
       height: 15rem;
       border: 1px solid #29273b;
-      overflow-y: scroll; /* ou auto */
+      overflow-y: scroll; 
     }
+
 .buttonEditavel{
     display: flex;
     flex-direction: column;
     gap: 1rem;
 }
+
 input{
-    width: 20rem;
+    background-color: white;
+    color: black;
+    width: 15rem;
     height: 2rem;
-    border: 1px solid #29273b;
+    border: 2px solid #29273b;
+}
+
+.caixa{
+  background-color: white;
 }
